--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /venv/
+__pycache__/agents.cpython-39.pyc
+__pycache__/main.cpython-39.pyc
+__pycache__/sim.cpython-36.pyc
+__pycache__/sim.cpython-39.pyc
+models/__pycache__/__init__.cpython-39.pyc
+models/__pycache__/basic_model.cpython-39.pyc
+.vscode/settings.json
