--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 /venv/
-__pycache__/agents.cpython-39.pyc
-__pycache__/main.cpython-39.pyc
-__pycache__/sim.cpython-36.pyc
-__pycache__/sim.cpython-39.pyc
-models/__pycache__/__init__.cpython-39.pyc
-models/__pycache__/basic_model.cpython-39.pyc
+__pycache__/*
+models/__pycache__/*
 .vscode/settings.json
+.idea/*
